# ai-infra-opportunity-workbench

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  app.py.backup  apply_fixes.py  detailed_dcf_diagnostic.py  diagnose_yfinance.py  pyproject.toml  requirements.txt  run.py  test_dcf_direct.py
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
app/: __init__.py  database.py  demo.py  domain.py  enrichment.py  main.py  models.py  presentation.py  repository.py  schemas.py  scoring.py
data/: account_intelligence.py  adaptive_confidence.py  ai_schemas.py  alpha_regression.py  annotate.py  api_key_manager.py  cache.py  catalog.py  company_brief.py  conclusion.py  confidence_engine.py  confidence_migration.py  confidence_regime.py  confidence_schema.py  contract_recommender.py  dcf_engine.py  earnings_history.py  gemini_analyst_v2.py  gemini_confidence.py  gemini_confidence.py.backup  glossary.py  greeks_risk_analyzer.py  industry_metrics.py  iv_history.py  iv_rank.py  macro.py  macro_cache.json  macro_engine.py  news.py  price_guidance.py  qualitative_proxies.py  quant_entry.py  reverse_dcf.py  semis_universe.py  semis_universe_cache.json  strategy_optimizer.py  trade_dashboard.py  units.py  volatility_surface_analyzer.py
docs/: architecture.md
static/: app.js  forms.css  responsive.css  styles.css  theme.css  workspace.css
templates/: index.html  report.html  semis.html
tests/: test_account_intelligence.py  test_enrichment.py  test_interface_contract.py  test_repository.py  test_scoring.py  (+1 more)
(+13 files in other folders)
